--- a/assignment3/package.json
+++ b/assignment3/package.json
@@ -27,7 +27,8 @@
         "tether": "^1.4.0"
     },
     "scripts": {
-        "start": "node app.js"
+        "start": "node app.js",
+        "build": "gulp build"
     },
     "license": "ISC"
 }
