--- a/assignment3/package.json
+++ b/assignment3/package.json
@@ -16,7 +16,7 @@
         "xss": "^0.2.13"
     },
     "devDependencies": {
-        "gulp": "^3.9.1",
+        "gulp": "^4.0.0",
         "gulp-autoprefixer": "^3.1.1",
         "gulp-clean-css": "^2.0.12",
         "gulp-concat": "^2.6.1",
@@ -27,8 +27,8 @@
         "tether": "^1.4.0"
     },
     "scripts": {
-        "start": "node app.js",
-        "build": "gulp build"
+        "prestart": "gulp sass",
+        "start": "node app.js"
     },
     "license": "ISC"
 }
