--- a/markdown_editor/package.json
+++ b/markdown_editor/package.json
@@ -4,28 +4,30 @@
   "description": "markdown editor with realtime display",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server --open --mode development",
+    "start": "webpack-dev-server --mode development",
     "build": "wepback"
   },
   "author": "",
   "license": "ISC",
-    "devDependencies": {
-        "@babel/core": "^7.1.0",
-        "@babel/plugin-syntax-class-properties": "^7.0.0",
-        "@babel/preset-env": "^7.1.0",
-        "@babel/preset-react": "^7.0.0",
-        "babel-loader": "^8.0.2",
-        "babel-plugin-transform-class-properties": "^7.0.0-beta.3",
-        "css-loader": "^1.0.0",
-        "html-loader": "^0.5.5",
-        "html-webpack-plugin": "^3.2.0",
-        "style-loader": "^0.23.0",
-        "webpack": "^4.19.1",
-        "webpack-cli": "^3.1.1",
-        "webpack-dev-server": "^3.1.8"
-     },
+  "devDependencies": {
+    "@babel/core": "^7.1.0",
+    "@babel/plugin-syntax-class-properties": "^7.0.0",
+    "@babel/preset-env": "^7.1.0",
+    "@babel/preset-react": "^7.0.0",
+    "babel-loader": "^8.0.2",
+    "babel-plugin-transform-class-properties": "^7.0.0-beta.3",
+    "css-loader": "^1.0.0",
+    "html-loader": "^0.5.5",
+    "html-webpack-plugin": "^3.2.0",
+    "style-loader": "^0.23.0",
+    "webpack": "^4.19.1",
+    "webpack-cli": "^3.1.1",
+    "webpack-dev-server": "^3.1.8"
+  },
   "dependencies": {
+    "bootstrap": "^4.1.3",
     "jquery": "^3.3.1",
+    "popper.js": "^1.14.4",
     "react": "^16.5.2",
     "react-dom": "^16.5.2"
   }
