set up routes in server and preliminary redis-connection/NRP

--- a/db_api/package.json
+++ b/db_api/package.json
@@ -5,8 +5,20 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "concurrently \"node worker/index.js\" \"node server/index.js\""
+    "start": "concurrently \"node worker/worker.js\" \"node server/index.js\"",
+    "work": "node worker/worker.js"
   },
   "author": "Max Remetz",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "bluebird": "^3.5.2",
+    "body-parser": "^1.17.0",
+    "concurrently": "^4.0.1",
+    "express": "^4.16.4",
+    "node-fetch": "^2.3.0",
+    "node-redis": "^0.1.7",
+    "node-redis-pubsub": "^1.0.2",
+    "node-uuid": "^1.4.7",
+    "redis": "^2.8.0"
+  }
 }
